--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,17 @@ dependencies {
 
     // REST API communication.
     // http://square.github.io/retrofit/
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
+    // RxJava2, RxAndroid (reactive bindings for Android), and RxJava2 CallAdapter for Retrofit
+    // https://github.com/ReactiveX/RxJava
+    // https://github.com/ReactiveX/RxAndroid
+    // https://github.com/square/retrofit/tree/master/retrofit-adapters/rxjava2
+    compile 'io.reactivex.rxjava2:rxjava:2.0.5'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
 
     // Image Loading
     // http://square.github.io/picasso/
