--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'realm-android'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
@@ -12,6 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -41,16 +41,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     // Android specific stuff
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
-    compile 'com.android.support:cardview-v7:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 
     // Third-party dependencies:
 
     // Google Maps
-    compile 'com.google.android.gms:play-services-maps:10.2.0'
-    compile 'com.google.android.gms:play-services-location:10.2.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
 
     // Dagger 2 dependency injector
     // https://github.com/codepath/android_guides/wiki/Dependency-Injection-with-Dagger-2
@@ -82,12 +82,6 @@ dependencies {
     // Custom fonts
     // https://github.com/chrisjenx/Calligraphy
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
-
-    // TODO we might be able to remove this since we're using Realm now
-    // Parcel generation.
-    // https://github.com/johncarl81/parceler
-//    compile 'org.parceler:parceler-api:1.1.6'
-//    annotationProcessor 'org.parceler:parceler:1.1.6'
 
     // Android string formatting
     // https://github.com/square/phrase
