--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Third-party dependencies:
 
@@ -92,5 +93,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    // FlowLayout
+    // https://github.com/nex3z/FlowLayout
+    compile 'com.nex3z:flow-layout:0.1.3'
 }
