* Added blank bus schedule activity and fragment. * Added AppRouter module * Added some TODOs in the RestApi * Bottom recycler view now shows the routes for a selected bus stop marker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
+
+        <activity
+            android:name=".ui.activities.BusStopScheduleActivity">
+        </activity>
+
     </application>
 
 </manifest>
