--- a/.gitignore
+++ b/.gitignore
@@ -34,10 +34,7 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/libraries
-.idea/vcs.xml
+.idea/
 
 # Keystore files
 *.jks
