--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,8 @@ dependencies {
     // FlowLayout
     // https://github.com/nex3z/FlowLayout
     compile 'com.nex3z:flow-layout:0.1.3'
+
+    // Easier RxJava2 debugging with better stacktraces
+    // https://github.com/T-Spoon/Traceur
+    compile 'com.tspoon.traceur:traceur:1.0.1'
 }
