--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".ui.activities.BusStopScheduleActivity">
         </activity>
 
+        <activity
+            android:name=".ui.activities.BusRouteMapActivity">
+        </activity>
+
     </application>
 
 </manifest>
