--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "jessevivanco.com.pegcitytransit"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -101,7 +101,7 @@ dependencies {
     // https://github.com/T-Spoon/Traceur
     compile 'com.tspoon.traceur:traceur:1.0.1'
 
-    //
+    // Android Parcelables made easy through code generation
     // https://github.com/johncarl81/parceler
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
