--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/app_name">
@@ -42,12 +43,13 @@
             android:value="@string/google_maps_key"/>
 
         <activity
-            android:name=".ui.activities.BusStopScheduleActivity">
-        </activity>
+            android:name=".ui.activities.BusStopScheduleActivity"
+            android:parentActivityName=".ui.activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
-            android:name=".ui.activities.BusRouteMapActivity">
-        </activity>
+            android:name=".ui.activities.BusRouteMapActivity"
+            android:parentActivityName=".ui.activities.MainActivity"/>
 
     </application>
 
