In the BusStopMapFragment, zoom to fit search area when we search for bus stops rather than fitting all markers within view bounds. The BusRouteMapFragment will still zoom to fit all the markers.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,8 @@ dependencies {
     // https://github.com/airbnb/lottie-android
     // Render After Effects animations natively on Android and iOS
     compile 'com.airbnb.android:lottie:2.0.0-beta4'
+
+    // Handy extensions to the Google Maps Android API.
+    // https://github.com/googlemaps/android-maps-utils
+    compile 'com.google.maps.android:android-maps-utils:0.5'
 }
