--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         // in the individual module build.gradle files
 
         // Gradle
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.4.0-alpha6'
 
         // Retrolambda let's us use lambdas without using Java 8
         classpath 'me.tatarka:gradle-retrolambda:3.4.0'
