* Updated lottie * Removed system action bar. * Added translucent status bar * Removed WidgetSize from BusStopInfoView (going to use a different layout xml instead of changing it programmatically).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,7 +107,7 @@ dependencies {
 
     // https://github.com/airbnb/lottie-android
     // Render After Effects animations natively on Android and iOS
-    compile 'com.airbnb.android:lottie:2.0.0-beta4'
+    compile 'com.airbnb.android:lottie:2.0.0-rc1'
 
     // Handy extensions to the Google Maps Android API.
     // https://github.com/googlemaps/android-maps-utils
