--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="28766c7de321ed35b7f447d8b4fe1a57bfa58d1b" />
     </application>
 
 </manifest>
