* Added animation library -> animating recycler view cells being populated. * Ensuring we only run the animations when the recycler view’s list gets set on the adapter. Any time a new cell is inflated, that would’ve invoked another animation.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,12 @@ dependencies {
     // A simple cache for Objects in Android (Thanks Iain!).
     // https://github.com/iainconnor/ObjectCache
     compile 'com.iainconnor:objectcache:0.0.19-SNAPSHOT'
+
+    // Lightweight Animation Library
+    // https://github.com/willowtreeapps/spruce-android
+    compile 'com.willowtreeapps.spruce:spruce-android:1.0.0'
+
+    // Report crashes.
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
