--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,7 @@ captures/
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+
+# Other things
 hidden_strings.xml
+app/release/
