--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'io.fabric'
 
 // Create a variable called keystorePropertiesFile, and initialize it to your
 // keystore.properties file, in the rootProject folder.
-def keystorePropertiesFile = rootProject.file("/Users/jessevivanco/Dev/keystores/PegCityTransit/keystore.properties")
+def keystorePropertiesFile = rootProject.file("/Users/jvivanco/Dev/android-keystores/PegCityTransit/keystore.properties")
 
 // Initialize a new Properties() object called keystoreProperties.
 def keystoreProperties = new Properties()
@@ -30,7 +30,7 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.3'
     defaultConfig {
         applicationId "jessevivanco.com.pegcitytransit"
         minSdkVersion 16
